--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>React Time</title>
+  <link href=“https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700” rel=“stylesheet”>
 </head>
 <body>
   <div id="application"></div>
